# erfinv

./: CMakeLists.txt  LICENSE  Makefile  README  README.txt  erfinv.c  erfinv.cpp  erfinv.h  erfinv_test.cpp  ppnd.h
C/: Makefile  erfinv.c  erfinv.h  erfinv_test.c
include/: erfinv.h
tests/: erfinv_test.cpp  ppnd_test.cpp
